Initial commit for plain HTML liquid glass site

--- a/index.html
+++ b/index.html
@@ -14,49 +14,49 @@
             <h1><a href="./index.html">Mandrusia</a></h1>
         </div>
         <nav>
-            <a href="./index.html" class="glass-button">Home</a>
-            <a href="./wiki/index.html" class="glass-button">VSaturn Wiki</a>
+            <a href="./index.html" class="liquid-glass-button">Home</a>
+            <a href="./wiki/index.html" class="liquid-glass-button">VSaturn Wiki</a>
         </nav>
     </header>
 
     <main>
-        <div class="glass-card hero-card glass-effect">
+        <div class="liquid-glass-effect hero-card">
             <h1>Welcome to Mandrusia!</h1>
             <p>Explore my projects and connect with me across different platforms.</p>
-            <a href="#projects" class="cta-button glass-button">View Projects</a>
+            <a href="#projects" class="liquid-glass-button cta-button">View Projects</a>
         </div>
 
         <div class="project-grid" id="projects">
-            <div class="project-item glass-effect">
+            <div class="project-item liquid-glass-effect">
                 <h2>VSaturn</h2>
                 <p>All-in-one media downloader for YouTube, TikTok, Soundcloud, and Instagram.</p>
                 <div class="links">
-                    <a href="./wiki/index.html" class="glass-button">Learn More</a>
-                    <a href="https://github.com/Mandrusian/VSaturn/releases" target="_blank" class="glass-button">Download App</a>
+                    <a href="./wiki/index.html" class="liquid-glass-button">Learn More</a>
+                    <a href="https://github.com/Mandrusian/VSaturn/releases" target="_blank" class="liquid-glass-button">Download App</a>
                 </div>
             </div>
 
-            <div class="project-item glass-effect">
+            <div class="project-item liquid-glass-effect">
                 <h2>ACL: Auto CoLor Grader</h2>
                 <p>Automate color grading tasks with this tool.</p>
                 <div class="links">
-                    <a href="https://github.com/Mandrusian/ACL" target="_blank" class="glass-button">View on GitHub</a>
+                    <a href="https://github.com/Mandrusian/ACL" target="_blank" class="liquid-glass-button">View on GitHub</a>
                 </div>
             </div>
 
-            <div class="project-item glass-effect">
+            <div class="project-item liquid-glass-effect">
                 <h2>TTSEC</h2>
                 <p>Quickly find a TikTok User`s Sec_id via CLI, with batch support.</p>
                 <div class="links">
-                    <a href="https://github.com/Mandrusian/TTSEC" target="_blank" class="glass-button">View on GitHub</a>
+                    <a href="https://github.com/Mandrusian/TTSEC" target="_blank" class="liquid-glass-button">View on GitHub</a>
                 </div>
             </div>
 
-            <div class="project-item glass-effect">
+            <div class="project-item liquid-glass-effect">
                 <h2>TFC: Tiktok Follower Counter</h2>
                 <p>A work-in-progress tool to count TikTok followers.</p>
                 <div class="links">
-                    <a href="https://github.com/Mandrusian/TFC" target="_blank" class="glass-button">View on GitHub</a>
+                    <a href="https://github.com/Mandrusian/TFC" target="_blank" class="liquid-glass-button">View on GitHub</a>
                 </div>
             </div>
         </div>
