--- a/index.html
+++ b/index.html
@@ -9,62 +9,91 @@
 </head>
 <body>
     <header>
-        <div class="header-content">
-            <img src="./assets/images/vsaturn.jpg" alt="VSaturn Logo" class="header-logo">
-            <h1><a href="./index.html">Mandrusia</a></h1>
+        <div class="header-inner">
+            <div class="header-content">
+                <img src="./assets/images/vsaturn.jpg" alt="VSaturn Logo" class="header-logo">
+                <h1><a href="./index.html">Mandrusia</a></h1>
+            </div>
+            <nav>
+                <a href="./index.html">Home</a>
+                <a href="./wiki/index.html">VSaturn Wiki</a>
+                <!-- Add more main navigation links here if needed -->
+            </nav>
         </div>
-        <nav>
-            <a href="./index.html" class="liquid-glass-button">Home</a>
-            <a href="./wiki/index.html" class="liquid-glass-button">VSaturn Wiki</a>
-        </nav>
     </header>
 
     <main>
-        <div class="liquid-glass-effect hero-card">
-            <h1>Welcome to Mandrusia!</h1>
-            <p>Explore my projects and connect with me across different platforms.</p>
-            <a href="#projects" class="liquid-glass-button cta-button">View Projects</a>
-        </div>
-
-        <div class="project-grid" id="projects">
-            <div class="project-item liquid-glass-effect">
+        <!-- VSaturn Hero Section -->
+        <section id="vsaturn-hero" class="section section-dark">
+            <div class="section-content">
                 <h2>VSaturn</h2>
-                <p>All-in-one media downloader for YouTube, TikTok, Soundcloud, and Instagram.</p>
-                <div class="links">
-                    <a href="./wiki/index.html" class="liquid-glass-button">Learn More</a>
-                    <a href="https://github.com/Mandrusian/VSaturn/releases" target="_blank" class="liquid-glass-button">Download App</a>
+                <p>The all-in-one media downloader for YouTube, TikTok, Soundcloud, and Instagram.</p>
+                <div class="cta-buttons">
+                    <a href="https://github.com/Mandrusian/VSaturn/releases" target="_blank" class="cta-button primary">Download Now</a>
+                    <a href="./wiki/index.html" class="cta-button secondary">Learn More</a>
                 </div>
             </div>
+        </section>
 
-            <div class="project-item liquid-glass-effect">
-                <h2>ACL: Auto CoLor Grader</h2>
-                <p>Automate color grading tasks with this tool.</p>
-                <div class="links">
-                    <a href="https://github.com/Mandrusian/ACL" target="_blank" class="liquid-glass-button">View on GitHub</a>
-                </div>
-            </div>
+        <!-- Other Projects Section -->
+        <section id="other-projects" class="section section-light">
+            <div class="section-content">
+                <h2>Other Projects</h2>
+                <p>Explore more tools and creations by Mandrusia.</p>
+                <div class="project-grid">
+                    <div class="project-card">
+                        <h3>ACL: Auto CoLor Grader</h3>
+                        <p>Automate color grading tasks with this powerful tool.</p>
+                        <div class="card-links">
+                            <a href="https://github.com/Mandrusian/ACL" target="_blank">View on GitHub</a>
+                        </div>
+                    </div>
 
-            <div class="project-item liquid-glass-effect">
-                <h2>TTSEC</h2>
-                <p>Quickly find a TikTok User`s Sec_id via CLI, with batch support.</p>
-                <div class="links">
-                    <a href="https://github.com/Mandrusian/TTSEC" target="_blank" class="liquid-glass-button">View on GitHub</a>
-                </div>
-            </div>
+                    <div class="project-card">
+                        <h3>TTSEC</h3>
+                        <p>Quickly find a TikTok User`s Sec_id via CLI, with batch support.</p>
+                        <div class="card-links">
+                            <a href="https://github.com/Mandrusian/TTSEC" target="_blank">View on GitHub</a>
+                        </div>
+                    </div>
 
-            <div class="project-item liquid-glass-effect">
-                <h2>TFC: Tiktok Follower Counter</h2>
-                <p>A work-in-progress tool to count TikTok followers.</p>
-                <div class="links">
-                    <a href="https://github.com/Mandrusian/TFC" target="_blank" class="liquid-glass-button">View on GitHub</a>
+                    <div class="project-card">
+                        <h3>TFC: Tiktok Follower Counter</h3>
+                        <p>A work-in-progress tool to count TikTok followers.</p>
+                        <div class="card-links">
+                            <a href="https://github.com/Mandrusian/TFC" target="_blank">View on GitHub</a>
+                        </div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </section>
+
+        <!-- About Mandrusia Section (Optional, using tsmandrusia.jpg if desired) -->
+        <!-- You can add another section here using tsmandrusia.jpg as a background or within a card -->
+        <!-- Example: -->
+        <!--
+        <section id="about-mandrusia" class="section section-dark">
+            <div class="section-content">
+                <img src="./assets/images/tsmandrusia.jpg" alt="Mandrusia" class="header-logo" style="width: 150px; height: 150px; border-radius: 30px; margin-bottom: 20px;">
+                <h2>About Mandrusia</h2>
+                <p>Learn more about the creator behind these projects.</p>
+                <div class="cta-buttons">
+                    <a href="https://mandrusian.github.io/Mandrusia" target="_blank" class="cta-button primary">Visit Mandrusia.github.io</a>
+                </div>
+            </div>
+        </section>
+        -->
     </main>
 
     <footer>
-        <p>&copy; 2025 Mandrusia. Made by Mandrusia. All rights reserved.</p>
-        <p>Connect: <a href="https://www.tiktok.com/@mandrusiatech" target="_blank">@mandrusiatech</a> | <a href="https://www.tiktok.com/@mandrusia.canada" target="_blank">@mandrusia.canada</a></p>
+        <div class="footer-inner">
+            <p>&copy; 2025 Mandrusia. All rights reserved.</p>
+            <p>Made by Mandrusia on <a href="https://mandrusian.github.io" target="_blank">mandrusian.github.io</a></p>
+            <div class="footer-links">
+                <a href="https://www.tiktok.com/@mandrusiatech" target="_blank">@mandrusiatech</a>
+                <a href="https://www.tiktok.com/@mandrusia.canada" target="_blank">@mandrusia.canada</a>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
