Implement Apple.com dark mode style with VSaturn hero

--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
             <nav>
                 <a href="./index.html">Home</a>
                 <a href="./wiki/index.html">VSaturn Wiki</a>
-                <!-- Add more main navigation links here if needed -->
             </nav>
         </div>
     </header>
@@ -25,7 +24,11 @@
     <main>
         <!-- VSaturn Hero Section -->
         <section id="vsaturn-hero" class="section section-dark">
-            <div class="section-content">
+            <img src="./assets/images/TNSVSaturn.jpg" alt="VSaturn Planet" class="vsaturn-planet center-main">
+            <img src="./assets/images/TNSVSaturn.jpg" alt="VSaturn Planet Blur" class="vsaturn-planet top-left">
+            <img src="./assets/images/TNSVSaturn.jpg" alt="VSaturn Planet Blur" class="vsaturn-planet bottom-right">
+
+            <div class="section-content hero-text-content">
                 <h2>VSaturn</h2>
                 <p>The all-in-one media downloader for YouTube, TikTok, Soundcloud, and Instagram.</p>
                 <div class="cta-buttons">
@@ -69,20 +72,18 @@
         </section>
 
         <!-- About Mandrusia Section (Optional, using tsmandrusia.jpg if desired) -->
-        <!-- You can add another section here using tsmandrusia.jpg as a background or within a card -->
-        <!-- Example: -->
-        <!--
         <section id="about-mandrusia" class="section section-dark">
             <div class="section-content">
                 <img src="./assets/images/tsmandrusia.jpg" alt="Mandrusia" class="header-logo" style="width: 150px; height: 150px; border-radius: 30px; margin-bottom: 20px;">
                 <h2>About Mandrusia</h2>
-                <p>Learn more about the creator behind these projects.</p>
+                <p>Learn more about the creator behind these projects and connect with me.</p>
                 <div class="cta-buttons">
-                    <a href="https://mandrusian.github.io/Mandrusia" target="_blank" class="cta-button primary">Visit Mandrusia.github.io</a>
+                    <a href="https://mandrusian.github.io/Mandrusia" target="_blank" class="cta-button primary">Visit My GitHub Pages</a>
+                    <a href="https://www.tiktok.com/@mandrusiatech" target="_blank" class="cta-button secondary">TikTok Tech</a>
+                    <a href="https://www.tiktok.com/@mandrusia.canada" target="_blank" class="cta-button secondary">TikTok Canada</a>
                 </div>
             </div>
         </section>
-        -->
     </main>
 
     <footer>
