Implement Apple.com dark mode style with VSaturn hero and scroll animation

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>The all-in-one media downloader for YouTube, TikTok, Soundcloud, and Instagram.</p>
                 <div class="cta-buttons">
                     <a href="https://github.com/Mandrusian/VSaturn/releases" target="_blank" class="cta-button primary">Download Now</a>
-                    <a href="https://mandrusian.github.io/VSaturn/index.html" class="cta-button secondary">Learn More</a>
+                    <a href="https://mandrusian.github.io/VSaturn/wiki/index.html" class="cta-button secondary">Learn More</a>
                 </div>
             </div>
         </section>
