Implement Apple.com dark mode style with VSaturn hero and scroll animation

--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     </header>
 
     <main>
+        <!-- VSaturn Hero Section -->
         <section id="vsaturn-hero" class="section section-dark">
+            <!-- Dark overlay for readability -->
             <div class="hero-overlay"></div>
 
             <img src="./assets/images/TNSVSaturn.png" alt="VSaturn Planet" class="vsaturn-planet center-main">
@@ -34,11 +36,12 @@
                 <p>The all-in-one media downloader for YouTube, TikTok, Soundcloud, and Instagram.</p>
                 <div class="cta-buttons">
                     <a href="https://github.com/Mandrusian/VSaturn/releases" target="_blank" class="cta-button primary">Download Now</a>
-                    <a href="https://mandrusian.github.io/VSaturn/index.html" class="cta-button secondary">Learn More</a>
+                    <a href="./about-vsaturn.html" class="cta-button secondary">Learn More</a>
                 </div>
             </div>
         </section>
 
+        <!-- Other Projects Section -->
         <section id="other-projects" class="section section-light">
             <div class="section-content">
                 <h2>Other Projects</h2>
@@ -71,6 +74,7 @@
             </div>
         </section>
 
+        <!-- About Mandrusia Section -->
         <section id="about-mandrusia" class="section section-dark">
             <div class="section-content">
                 <img src="./assets/images/tsmandrusia.jpg" alt="Mandrusia" class="header-logo" style="width: 150px; height: 150px; border-radius: 30px; margin-bottom: 20px;">
