Implement Apple.com dark mode style with VSaturn hero and scroll animation

--- a/about-vsaturn.html
+++ b/about-vsaturn.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About VSaturn - Mandrusia</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" type="image/png" href="./assets/images/tsmandrusia.jpg">
+    <link rel="icon" type="image/png" href="./assets/images/mandrusia-profile.png">
 </head>
 <body>
     <header>
         <div class="header-inner">
             <div class="header-content">
-                <img src="./assets/images/vsaturn.jpg" alt="VSaturn Logo" class="header-logo">
+                <img src="./assets/images/vsaturn-icon.png" alt="VSaturn Logo" class="header-logo">
                 <h1><a href="./index.html">Mandrusia</a></h1>
             </div>
             <nav>
@@ -24,7 +24,7 @@
     <main>
         <section class="section section-dark">
             <div class="section-content">
-                <img src="./assets/images/vsaturn.jpg" alt="VSaturn App Icon" class="header-logo" style="width: 120px; height: 120px; border-radius: 25px; margin-bottom: 20px;">
+                <img src="./assets/images/vsaturn-icon.png" alt="VSaturn App Icon" class="header-logo" style="width: 120px; height: 120px; border-radius: 25px; margin-bottom: 20px;">
                 <h2>VSaturn</h2>
                 <p style="font-size: 22px; color: var(--color-text-light);">Version 2.5</p>
             </div>
