--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mandrusia - Home</title>
     <link rel="stylesheet" href="./assets/css/style.css">
-    <link rel="icon" type="image/png" href="./assets/images/tsmandrusia.jpg">
+    <link rel="icon" type="image/png" href="./assets/images/mandrusia-profile.png">
 </head>
 <body>
     <header>
         <div class="header-inner">
             <div class="header-content">
-                <img src="./assets/images/vsaturn.jpg" alt="VSaturn Logo" class="header-logo">
+                <img src="./assets/images/vsaturn-icon.png" alt="VSaturn Logo" class="header-logo">
                 <h1><a href="./index.html">Mandrusia</a></h1>
             </div>
             <nav>
@@ -27,9 +27,9 @@
             <!-- Dark overlay for readability -->
             <div class="hero-overlay"></div>
 
-            <img src="./assets/images/TNSVSaturn.png" alt="VSaturn Planet" class="vsaturn-planet center-main">
-            <img src="./assets/images/TNSVSaturn.png" alt="VSaturn Planet Blur" class="vsaturn-planet top-left">
-            <img src="./assets/images/TNSVSaturn.png" alt="VSaturn Planet Blur" class="vsaturn-planet bottom-right">
+            <img src="./assets/images/vsaturn-hero-planet.png" alt="VSaturn Planet" class="vsaturn-planet center-main">
+            <img src="./assets/images/vsaturn-hero-planet.png" alt="VSaturn Planet Blur" class="vsaturn-planet top-left">
+            <img src="./assets/images/vsaturn-hero-planet.png" alt="VSaturn Planet Blur" class="vsaturn-planet bottom-right">
 
             <div class="section-content hero-text-content">
                 <h2>VSaturn</h2>
@@ -77,7 +77,7 @@
         <!-- About Mandrusia Section -->
         <section id="about-mandrusia" class="section section-dark">
             <div class="section-content">
-                <img src="./assets/images/tsmandrusia.jpg" alt="Mandrusia" class="header-logo" style="width: 150px; height: 150px; border-radius: 30px; margin-bottom: 20px;">
+                <img src="./assets/images/mandrusia-profile.png" alt="Mandrusia" class="header-logo" style="width: 150px; height: 150px; border-radius: 30px; margin-bottom: 20px;">
                 <h2>About Mandrusia</h2>
                 <p>Learn more about the creator behind these projects and connect with me.</p>
                 <div class="cta-buttons">
