Implement Apple.com dark mode style with VSaturn hero and scroll animation

--- a/about-vsaturn.html
+++ b/about-vsaturn.html
@@ -26,7 +26,7 @@
             <div class="section-content">
                 <img src="./assets/images/vsaturn-icon.png" alt="VSaturn App Icon" class="header-logo" style="width: 120px; height: 120px; border-radius: 25px; margin-bottom: 20px;">
                 <h2>VSaturn</h2>
-                <p style="font-size: 22px; color: var(--color-text-light);">Version 2.5</p>
+                <p style="font-size: 22px; color: var(--color-text-light);">Version 2.6</p>
             </div>
         </section>
 
@@ -62,7 +62,20 @@
                 <h2>Creator</h2>
                 <p style="font-size: 18px; color: var(--color-text-dark);">Made by Mandrusia on <a href="https://mandrusian.github.io" target="_blank">mandrusian.github.io</a></p>
                 <p style="font-size: 18px; color: var(--color-text-dark);">Project Started: July 11, 2025</p>
-                <p style="font-size: 18px; color: var(--color-text-dark);">Latest Release: V2.5</p>
+                <p style="font-size: 18px; color: var(--color-text-dark);">Latest Release: V2.6</p>
+            </div>
+        </section>
+
+        <!-- New section for App Screenshots -->
+        <section id="app-screenshots" class="section section-light">
+            <div class="section-content">
+                <h2>App Screenshots</h2>
+                <div class="project-grid">
+                    <img src="./assets/images/mainpage.png" alt="VSaturn Main Page" class="project-card" style="width: 100%; height: auto; object-fit: contain;">
+                    <img src="./assets/images/about.png" alt="VSaturn About Page" class="project-card" style="width: 100%; height: auto; object-fit: contain;">
+                    <img src="./assets/images/errorurl.png" alt="VSaturn Error Message" class="project-card" style="width: 100%; height: auto; object-fit: contain;">
+                    <img src="./assets/images/successful.jpg" alt="VSaturn Success Message" class="project-card" style="width: 100%; height: auto; object-fit: contain;">
+                </div>
             </div>
         </section>
     </main>
