Implement Apple.com dark mode style with VSaturn hero and scroll animation

--- a/about-vsaturn.html
+++ b/about-vsaturn.html
@@ -22,7 +22,7 @@
     </header>
 
     <main>
-        <section class="section section-dark">
+        <section id="about-vsaturn-page" class="section section-dark">
             <div class="section-content">
                 <img src="./assets/images/vsaturn-icon.png" alt="VSaturn App Icon" class="header-logo" style="width: 120px; height: 120px; border-radius: 25px; margin-bottom: 20px;">
                 <h2>VSaturn</h2>
@@ -70,11 +70,11 @@
         <section id="app-screenshots" class="section section-light">
             <div class="section-content">
                 <h2>App Screenshots</h2>
-                <div class="project-grid">
-                    <img src="./assets/images/mainpage.png" alt="VSaturn Main Page" class="project-card" style="width: 100%; height: auto; object-fit: contain;">
-                    <img src="./assets/images/about.png" alt="VSaturn About Page" class="project-card" style="width: 100%; height: auto; object-fit: contain;">
-                    <img src="./assets/images/errorurl.png" alt="VSaturn Error Message" class="project-card" style="width: 100%; height: auto; object-fit: contain;">
-                    <img src="./assets/images/successful.jpg" alt="VSaturn Success Message" class="project-card" style="width: 100%; height: auto; object-fit: contain;">
+                <div class="image-gallery">
+                    <img src="./assets/images/mainpage.png" alt="VSaturn Main Page" style="width: 100%; height: auto; object-fit: contain;">
+                    <img src="./assets/images/about.png" alt="VSaturn About Page" style="width: 100%; height: auto; object-fit: contain;">
+                    <img src="./assets/images/errorurl.png" alt="VSaturn Error Message" style="width: 100%; height: auto; object-fit: contain;">
+                    <img src="./assets/images/successful.jpg" alt="VSaturn Success Message" style="width: 100%; height: auto; object-fit: contain;">
                 </div>
             </div>
         </section>
