Implement Apple.com dark mode style with VSaturn hero and scroll animation

--- a/about-vsaturn.html
+++ b/about-vsaturn.html
@@ -34,6 +34,7 @@
             <div class="section-content">
                 <h2>Overview</h2>
                 <p style="font-size: 18px; color: var(--color-text-dark);">VSaturn is your all-in-one media downloader, designed for seamless content acquisition from popular online platforms. It simplifies the process of downloading videos and audio from YouTube, TikTok, Soundcloud, and Instagram.</p>
+                <img src="./assets/images/mainpage.png" alt="VSaturn Main Page Screenshot" class="app-screenshot-card fade-in-on-scroll">
             </div>
         </section>
 
@@ -46,6 +47,7 @@
                     <li style="margin-bottom: 10px;">Intuitive multi-page navigation.</li>
                     <li>Built with Python and PyQt6.</li>
                 </ul>
+                <img src="./assets/images/about.png" alt="VSaturn About Page Screenshot" class="app-screenshot-card fade-in-on-scroll">
             </div>
         </section>
 
@@ -54,6 +56,7 @@
                 <h2>License</h2>
                 <p style="font-size: 18px; color: var(--color-text-dark);">VSaturn V2.x is distributed under the MIT License.</p>
                 <p style="font-size: 14px; color: var(--color-text-dark);">(no copyright)</p>
+                <img src="./assets/images/errorurl.png" alt="VSaturn Error Message Screenshot" class="app-screenshot-card fade-in-on-scroll">
             </div>
         </section>
 
@@ -63,19 +66,7 @@
                 <p style="font-size: 18px; color: var(--color-text-dark);">Made by Mandrusia on <a href="https://mandrusian.github.io" target="_blank">mandrusian.github.io</a></p>
                 <p style="font-size: 18px; color: var(--color-text-dark);">Project Started: July 11, 2025</p>
                 <p style="font-size: 18px; color: var(--color-text-dark);">Latest Release: V2.6</p>
-            </div>
-        </section>
-
-        <!-- New section for App Screenshots -->
-        <section id="app-screenshots" class="section section-light">
-            <div class="section-content">
-                <h2>App Screenshots</h2>
-                <div class="image-gallery">
-                    <img src="./assets/images/mainpage.png" alt="VSaturn Main Page" style="width: 100%; height: auto; object-fit: contain;">
-                    <img src="./assets/images/about.png" alt="VSaturn About Page" style="width: 100%; height: auto; object-fit: contain;">
-                    <img src="./assets/images/errorurl.png" alt="VSaturn Error Message" style="width: 100%; height: auto; object-fit: contain;">
-                    <img src="./assets/images/successful.jpg" alt="VSaturn Success Message" style="width: 100%; height: auto; object-fit: contain;">
-                </div>
+                <img src="./assets/images/successful.jpg" alt="VSaturn Success Message Screenshot" class="app-screenshot-card fade-in-on-scroll">
             </div>
         </section>
     </main>
