Implement Apple.com dark mode style with VSaturn hero and scroll animation

--- a/about-vsaturn.html
+++ b/about-vsaturn.html
@@ -24,9 +24,9 @@
     <main>
         <section id="about-vsaturn-page" class="section section-dark">
             <div class="section-content">
-                <img src="./assets/images/vsaturn-icon.png" alt="VSaturn App Icon" class="header-logo" style="width: 120px; height: 120px; border-radius: 25px; margin-bottom: 20px;">
+                <img src="./assets/images/vsaturn-icon.png" alt="VSaturn App Icon" class="app-screenshot" style="width: 120px; height: 120px; border-radius: 25px; margin-bottom: 20px;">
                 <h2>VSaturn</h2>
-                <p style="font-size: 22px; color: var(--color-text-light);">Version 2.6</p>
+                <p style="font-size: 22px; color: var(--color-text-light);">Version 2.2</p>
             </div>
         </section>
 
@@ -34,7 +34,7 @@
             <div class="section-content">
                 <h2>Overview</h2>
                 <p style="font-size: 18px; color: var(--color-text-dark);">VSaturn is your all-in-one media downloader, designed for seamless content acquisition from popular online platforms. It simplifies the process of downloading videos and audio from YouTube, TikTok, Soundcloud, and Instagram.</p>
-                <img src="./assets/images/mainpage.png" alt="VSaturn Main Page Screenshot" class="app-screenshot-card fade-in-on-scroll">
+                <img src="./assets/images/mainpage.png" alt="VSaturn Main Page Screenshot" class="app-screenshot fade-in-on-scroll">
             </div>
         </section>
 
@@ -47,7 +47,7 @@
                     <li style="margin-bottom: 10px;">Intuitive multi-page navigation.</li>
                     <li>Built with Python and PyQt6.</li>
                 </ul>
-                <img src="./assets/images/about.png" alt="VSaturn About Page Screenshot" class="app-screenshot-card fade-in-on-scroll">
+                <img src="./assets/images/about.png" alt="VSaturn About Page Screenshot" class="app-screenshot fade-in-on-scroll">
             </div>
         </section>
 
@@ -56,7 +56,7 @@
                 <h2>License</h2>
                 <p style="font-size: 18px; color: var(--color-text-dark);">VSaturn V2.x is distributed under the MIT License.</p>
                 <p style="font-size: 14px; color: var(--color-text-dark);">(no copyright)</p>
-                <img src="./assets/images/errorurl.png" alt="VSaturn Error Message Screenshot" class="app-screenshot-card fade-in-on-scroll">
+                <img src="./assets/images/errorurl.png" alt="VSaturn Error Message Screenshot" class="app-screenshot fade-in-on-scroll">
             </div>
         </section>
 
@@ -65,8 +65,8 @@
                 <h2>Creator</h2>
                 <p style="font-size: 18px; color: var(--color-text-dark);">Made by Mandrusia on <a href="https://mandrusian.github.io" target="_blank">mandrusian.github.io</a></p>
                 <p style="font-size: 18px; color: var(--color-text-dark);">Project Started: July 11, 2025</p>
-                <p style="font-size: 18px; color: var(--color-text-dark);">Latest Release: V2.6</p>
-                <img src="./assets/images/successful.jpg" alt="VSaturn Success Message Screenshot" class="app-screenshot-card fade-in-on-scroll">
+                <p style="font-size: 18px; color: var(--color-text-dark);">Latest Release: V2.2</p>
+                <img src="./assets/images/successful.jpg" alt="VSaturn Success Message Screenshot" class="app-screenshot fade-in-on-scroll">
             </div>
         </section>
     </main>
