Integrate app screenshots into about page with dynamic appearance and fix rotation

--- a/about-vsaturn.html
+++ b/about-vsaturn.html
@@ -33,7 +33,7 @@
         <section class="section section-light">
             <div class="section-content">
                 <h2>Overview</h2>
-                <p style="font-size: 18px; color: var(--color-text-dark);">VSaturn is your all-in-one media downloader, designed for seamless content acquisition from popular online platforms. It simplifies the process of downloading videos and audio from YouTube, TikTok, Soundcloud, and Instagram.</p>
+                <p style="font-size: 18px; color: var(--color-text-dim);">VSaturn is your all-in-one media downloader, designed for seamless content acquisition from popular online platforms. It simplifies the process of downloading videos and audio from YouTube, TikTok, Soundcloud, and Instagram.</p>
                 <img src="./assets/images/mainpage.png" alt="VSaturn Main Page Screenshot" class="app-screenshot fade-in-on-scroll">
             </div>
         </section>
@@ -41,7 +41,7 @@
         <section class="section section-dark">
             <div class="section-content">
                 <h2>Features</h2>
-                <ul style="list-style: none; padding: 0; font-size: 18px; color: var(--color-text-dark);">
+                <ul style="list-style: none; padding: 0; font-size: 18px; color: var(--color-text-dim);">
                     <li style="margin-bottom: 10px;">Download from YouTube, TikTok, Soundcloud, Instagram.</li>
                     <li style="margin-bottom: 10px;">Sleek, modern GUI with a "liquid glass" aesthetic.</li>
                     <li style="margin-bottom: 10px;">Intuitive multi-page navigation.</li>
@@ -54,8 +54,8 @@
         <section class="section section-light">
             <div class="section-content">
                 <h2>License</h2>
-                <p style="font-size: 18px; color: var(--color-text-dark);">VSaturn V2.x is distributed under the MIT License.</p>
-                <p style="font-size: 14px; color: var(--color-text-dark);">(no copyright)</p>
+                <p style="font-size: 18px; color: var(--color-text-dim);">VSaturn V2.x is distributed under the MIT License.</p>
+                <p style="font-size: 14px; color: var(--color-text-dim);">(no copyright)</p>
                 <img src="./assets/images/errorurl.png" alt="VSaturn Error Message Screenshot" class="app-screenshot fade-in-on-scroll">
             </div>
         </section>
@@ -63,9 +63,9 @@
         <section class="section section-dark">
             <div class="section-content">
                 <h2>Creator</h2>
-                <p style="font-size: 18px; color: var(--color-text-dark);">Made by Mandrusia on <a href="https://mandrusian.github.io" target="_blank">mandrusian.github.io</a></p>
-                <p style="font-size: 18px; color: var(--color-text-dark);">Project Started: July 11, 2025</p>
-                <p style="font-size: 18px; color: var(--color-text-dark);">Latest Release: V2.2</p>
+                <p style="font-size: 18px; color: var(--color-text-dim);">Made by Mandrusia on <a href="https://mandrusian.github.io" target="_blank">mandrusian.github.io</a></p>
+                <p style="font-size: 18px; color: var(--color-text-dim);">Project Started: July 11, 2025</p>
+                <p style="font-size: 18px; color: var(--color-text-dim);">Latest Release: V2.2</p>
                 <img src="./assets/images/successful.jpg" alt="VSaturn Success Message Screenshot" class="app-screenshot fade-in-on-scroll">
             </div>
         </section>
