Implement Apple.com dark mode style with VSaturn hero and scroll animation

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <h2>Other Projects</h2>
                 <p>Explore more tools and creations by Mandrusia.</p>
                 <div class="project-grid">
-                    <div class="project-card liquid-glass-effect">
+                    <div class="project-card">
                         <h3>ACL: Auto CoLor Grader</h3>
                         <p>Automate color grading tasks with this powerful tool.</p>
                         <div class="card-links">
@@ -55,7 +55,7 @@
                         </div>
                     </div>
 
-                    <div class="project-card liquid-glass-effect">
+                    <div class="project-card">
                         <h3>TTSEC</h3>
                         <p>Quickly find a TikTok User`s Sec_id via CLI, with batch support.</p>
                         <div class="card-links">
@@ -63,7 +63,7 @@
                         </div>
                     </div>
 
-                    <div class="project-card liquid-glass-effect">
+                    <div class="project-card">
                         <h3>TFC: Tiktok Follower Counter</h3>
                         <p>A work-in-progress tool to count TikTok followers.</p>
                         <div class="card-links">
