Update index.html (about)

--- a/index.html
+++ b/index.html
@@ -78,12 +78,11 @@
         <section id="about-mandrusia" class="section section-dark">
             <div class="section-content">
                 <img src="./assets/images/mandrusia-profile.png" alt="Mandrusia" class="header-logo" style="width: 150px; height: 150px; border-radius: 30px; margin-bottom: 20px;">
-                <h2>About Mandrusia</h2>
-                <p>Learn more about the creator behind these projects and connect with me.</p>
+                <h2>About</h2>
                 <div class="cta-buttons">
-                    <a href="https://mandrusian.github.io/Mandrusia" target="_blank" class="cta-button primary">Visit My GitHub Pages</a>
-                    <a href="https://www.tiktok.com/@mandrusiatech" target="_blank" class="cta-button secondary">TikTok Tech</a>
-                    <a href="https://www.tiktok.com/@mandrusia.canada" target="_blank" class="cta-button secondary">TikTok Canada</a>
+                    <a href="https://mandrusian.github.io/VSaturn" target="_blank" class="cta-button primary">VSaturn Wiki</a>
+                    <a href="https://www.tiktok.com/@mandrusiatech" target="_blank" class="cta-button secondary"智安 • MandrusiaTech</a>
+                    <a href="https://www.tiktok.com/@mandrusia.canada" target="_blank" class="cta-button secondary">Mandrusiatech, Alt Acc</a>
                 </div>
             </div>
         </section>
