--- a/about-vsaturn.html
+++ b/about-vsaturn.html
@@ -73,7 +73,7 @@
 
     <footer>
         <div class="footer-inner">
-            <p>&copy; 2025 Mandrusia. All rights reserved.</p>
+            <p>&copy; Mandrusia</p>
             <p>Made by Mandrusia on <a href="https://mandrusian.github.io" target="_blank">mandrusian.github.io</a></p>
             <div class="footer-links">
                 <a href="https://www.tiktok.com/@mandrusiatech" target="_blank">@mandrusiatech</a>
