--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 <h2>About</h2>
                 <div class="cta-buttons">
                     <a href="https://mandrusian.github.io/VSaturn" target="_blank" class="cta-button primary">VSaturn Wiki</a>
-                    <a href="https://www.tiktok.com/@mandrusiatech" target="_blank" class="cta-button secondary"智安 • MandrusiaTech</a>
+                    <a href="https://www.tiktok.com/@mandrusiatech" target="_blank" class="cta-button secondary">智安 • MandrusiaTech</a>
                     <a href="https://www.tiktok.com/@mandrusia.canada" target="_blank" class="cta-button secondary">Mandrusiatech, Alt Acc</a>
                 </div>
             </div>
