--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
         <section id="other-projects" class="section section-light">
             <div class="section-content">
                 <h2>Other Projects</h2>
-                <p>Explore more tools and creations by Mandrusia.</p>
+                <p>智安 • Mandrusia.</p>
                 <div class="project-grid">
                     <div class="project-card liquid-glass-effect">
                         <h3>ACL: Auto CoLor Grader</h3>
-                        <p>Automate color grading tasks with this powerful tool.</p>
+                        <p>Automate color grading tasks, MacOS Only.</p>
                         <div class="card-links">
                             <a href="https://github.com/Mandrusian/ACL" target="_blank">View on GitHub</a>
                         </div>
                     </div>
 
                     <div class="project-card liquid-glass-effect">
-                        <h3>TTSEC</h3>
-                        <p>Quickly find a TikTok User`s Sec_id via CLI, with batch support.</p>
+                        <h3>SecID Finder</h3>
+                        <p>Quickly find a (TikTok) User`s Sec_id via CLI, with batch support.</p>
                         <div class="card-links">
-                            <a href="https://github.com/Mandrusian/TTSEC" target="_blank">View on GitHub</a>
+                            <a href="https://github.com/Mandrusian/SECID" target="_blank">View on GitHub</a>
                         </div>
                     </div>
 
